Scale issue on mobile fixed

--- a/src/Styles/main.module.scss
+++ b/src/Styles/main.module.scss
@@ -126,6 +126,7 @@ a {
     overflow-y: unset;
     padding-left: 5%;
     padding-right: 5%;
+    font-size: 0.8rem;
   }
 
   .col1, .col2 {
