--- a/src/Styles/pagecontents.module.scss
+++ b/src/Styles/pagecontents.module.scss
@@ -1,74 +1,72 @@
 .pagecontent {
-    animation-duration: 1s;
-    animation-fill-mode: both;
-    opacity: 0;
-    animation-name: fadeInRight;
-    position: fixed;
-    min-width: 19rem;
-    top: 11rem;
-    left: 0;
-    padding: .5%;
-    padding-left: 2%;
-    margin-top: -1.5rem;
-    background-color: var(--background);
-    border-bottom-right-radius: 50px;
-    border-top-right-radius: 50px;
-    box-shadow: 20px 20px 60px var(--shadow),
-        -20px -20px 60px var(--highlight);
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  opacity: 0;
+  animation-name: fadeInRight;
+  position: fixed;
+  min-width: 19rem;
+  top: 11rem;
+  left: 0;
+  padding: 0.5%;
+  padding-left: 2%;
+  margin-top: -1.5rem;
+  background-color: var(--background);
+  border-bottom-right-radius: 50px;
+  border-top-right-radius: 50px;
+  box-shadow: 20px 20px 60px var(--shadow), -20px -20px 60px var(--highlight);
 }
 
 .list {
-    padding: .2rem;
+  padding: 0.2rem;
 }
 
 .toggle {
-    display: none;
+  display: none;
 }
 
 @media only screen and (max-width: 90rem) {
-    .pagecontent {
-        background: var(--background);
-        position: fixed;
+  .pagecontent {
+    background: var(--background);
+    position: fixed;
+    left: calc(0% - 21rem);
+    padding: 1.5rem;
+    transition: left 0.4s ease-in-out;
+    z-index: 1;
+    box-shadow: none;
+    border: 2px solid var(--Primary);
+  }
 
-        left: calc(0% - 20rem);
+  .toggle {
+    display: inherit;
+    position: absolute;
+    left: 96%;
+    top: 45%;
+    font-size: 1rem;
+  }
 
-
-        padding: 1.5rem;
-        transition: left 0.4s ease-in-out;
-        z-index: 1;
-    }
-
-    .toggle {
-        display: inherit;
-        position: absolute;
-        left: 94%;
-        top: 45%;
-        font-size: 1.5rem;
-    }
-
-    .pagecontent:hover {
-        left: 0px;
-    }
+  .pagecontent:hover {
+    left: 0px;
+  }
 }
 
 @keyframes fadeInUp {
-    from {
-        transform: translate3d(0, 40px, 0)
-    }
+  from {
+    transform: translate3d(0, 40px, 0);
+  }
 
-    to {
-        transform: translate3d(0, 0, 0);
-        opacity: 1
-    }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
 }
 
 @keyframes fadeInRight {
-    from {
-        transform: translate3d(-40px, 0, 0)
-    }
+  from {
+    transform: translate3d(-40px, 0, 0);
+  }
 
-    to {
-        transform: translate3d(0, 0, 0);
-        opacity: 1
-    }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
 }
